Clean alert code and add config page to UI
